FIX layout bug user list

--- a/public/prototype/css/ts-web-prototype.css
+++ b/public/prototype/css/ts-web-prototype.css
@@ -363,7 +363,7 @@ img.user {
   overflow: auto;
 }
 
-#groupList {
+#groupList, #userList {
   height: 460px;
 }
 
